# mtk-client

./: .gitignore  LICENSE  MANIFEST.in  README.md  gui.py  gui_test.py  mtk  mtk.py  mtk_console.spec  mtk_gui  pyproject.toml  requirements.txt  setup.py  stage2
.github/workflows/: python-app.yml
gui/: readFlashPartitions.py  toolkit.py  toolsMenu.py
logs/: hwparam.json
mtkclient/config/: brom_config.py  missing_brom.txt  mtk_config.py  payloads.py  usb_ids.py
mtkclient/gui/: create_gui.sh  eraseFlashPartitions.py  erasepart_gui.py  erasepart_gui.ui  init_translations.sh  main_gui.py  main_gui.ui  readFlashPartitions.py  readFull.py  readfull_gui.py  readfull_gui.ui  readpart_gui.py  readpart_gui.ui  toolkit.py  toolsMenu.py  unlock_gui.ui  writeFlashPartitions.py  writeFull.py  writefull_gui.py  writefull_gui.ui  writepart_gui.py  writepart_gui.ui
mtkclient/gui/i18n/: de_DE.qm  de_DE.ts  en_GB.qm  en_GB.ts  es_CA.qm  es_CA.ts  es_ES.qm  es_ES.ts  fr_FR.qm  fr_FR.ts  generate_translation.sh  nl_NL.qm  nl_NL.ts  update_translations.sh  zh_CN.qm  zh_CN.ts
